fixed unreadable failed login count message

--- a/theme.scss
+++ b/theme.scss
@@ -227,6 +227,7 @@ a:hover{
 
     #locked{
       margin-left: 7px;
+      color: #F43434;
     }
   }
 }
